getoutline/07-outline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: getoutline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: outline
        image: outlinewiki/outline:0.80.2
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1001
          runAsGroup: 1001
        resources:
          requests:
            memory: "512Mi"
            cpu: "10m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: outline-data
          mountPath: /var/lib/outline/data
      volumes:
      - name: outline-data
        persistentVolumeClaim:
          claimName: outline-data-pvc
